crates/toml/tests/snapshots/invalid/string/basic-out-of-range-unicode-escape-01.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\UFFFFFFFF"
  |        ^
invalid value, expected unicode hexadecimal value
